--- a/SwiftQuiz/Storyboards/Base.lproj/Main.storyboard
+++ b/SwiftQuiz/Storyboards/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Разработчики"/>
                                 <connections>
-                                    <segue destination="QOB-E7-rtV" kind="presentation" modalPresentationStyle="pageSheet" id="ck7-gk-KMo"/>
+                                    <segue destination="QOB-E7-rtV" kind="presentation" modalPresentationStyle="fullScreen" id="ck7-gk-KMo"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -80,20 +80,64 @@
             </objects>
             <point key="canvasLocation" x="4138.125" y="-13.732394366197184"/>
         </scene>
-        <!--View Controller-->
+        <!--Team View Controller-->
         <scene sceneID="MQJ-F3-HWc">
             <objects>
-                <viewController id="QOB-E7-rtV" sceneMemberID="viewController">
+                <viewController id="QOB-E7-rtV" customClass="TeamViewController" customModule="SwiftQuiz" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tdy-U1-HRe">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NFN-Il-YDM">
+                                <rect key="frame" x="0.0" y="20" width="320" height="308"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="A01-s0-T9b"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="YM3-9v-sgO"/>
+                            </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="5" translatesAutoresizingMaskIntoConstraints="NO" id="EfR-bz-L0r">
+                                <rect key="frame" x="90" y="271" width="140" height="26"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="currentPageIndicatorTintColor" red="0.92549026010000002" green="0.38823530080000002" blue="0.21568629149999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <connections>
+                                    <action selector="pageControlAction:" destination="QOB-E7-rtV" eventType="valueChanged" id="zbB-Bn-fJ3"/>
+                                    <action selector="pageControlFlip:" destination="QOB-E7-rtV" eventType="valueChanged" id="G1e-Y7-dv1"/>
+                                </connections>
+                            </pageControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cx1-W9-GUG">
+                                <rect key="frame" x="16" y="339" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.92549026010000002" green="0.38823530080000002" blue="0.21568629149999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="team" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="diH-QD-6GZ">
+                                <rect key="frame" x="16" y="376" width="288" height="152"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.92549026010000002" green="0.38823530080000002" blue="0.21568629149999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="h6b-QH-ddl"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="h6b-QH-ddl" firstAttribute="trailing" secondItem="Cx1-W9-GUG" secondAttribute="trailing" constant="16" id="0Fn-0b-J6e"/>
+                            <constraint firstItem="Cx1-W9-GUG" firstAttribute="centerY" secondItem="tdy-U1-HRe" secondAttribute="centerY" multiplier="16:13" id="4c8-Dj-cgR"/>
+                            <constraint firstItem="h6b-QH-ddl" firstAttribute="bottom" secondItem="diH-QD-6GZ" secondAttribute="bottom" constant="40" id="5dR-aY-W5V"/>
+                            <constraint firstItem="diH-QD-6GZ" firstAttribute="top" secondItem="Cx1-W9-GUG" secondAttribute="bottom" constant="16" id="U2q-xj-i8n"/>
+                            <constraint firstItem="Cx1-W9-GUG" firstAttribute="leading" secondItem="h6b-QH-ddl" secondAttribute="leading" constant="16" id="ePj-ge-fB1"/>
+                            <constraint firstItem="diH-QD-6GZ" firstAttribute="leading" secondItem="h6b-QH-ddl" secondAttribute="leading" constant="16" id="mfe-bb-LZG"/>
+                            <constraint firstItem="h6b-QH-ddl" firstAttribute="trailing" secondItem="diH-QD-6GZ" secondAttribute="trailing" constant="16" id="s3M-88-Y5Z"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="nameLabel" destination="Cx1-W9-GUG" id="1Tm-hh-ccB"/>
+                        <outlet property="pageControl" destination="EfR-bz-L0r" id="iVQ-vL-FHO"/>
+                        <outlet property="scrollView" destination="NFN-Il-YDM" id="9Z1-gI-dUp"/>
+                        <outlet property="teamLabel" destination="diH-QD-6GZ" id="qK5-Gr-TMo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dCZ-Ju-APS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4138" y="768"/>
+            <point key="canvasLocation" x="4136.25" y="767.95774647887322"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="172-Ku-Tgk">
